--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    web page!
-</body>
-</html>
+<table border='1'><tr><th>2024-03-17</th></tr><tr><td>{'12201639': '1400-1559'}</td></tr></table>
