--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<table border='1'><tr><th>2024-03-16</th></tr><tr><td>{'12201639': '1400-1559'}</td></tr></table>
+<table border='1'><tr><th>2024-03-17</th></tr><tr><td>{'12201649': '1200-1359'}</td></tr><tr><td>{'12201639': '1400-1559'}</td></tr></table>
