--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h2>2024-03-17</h2><table border='1'><tr><th colspan='2'>2D</th></tr><tr><td>12201639</td><td>1400-1559</td></tr></table>
+<h2>2024-03-18</h2><table border='1'><tr><th colspan='2'>2F</th></tr><tr><td>12201649</td><td>1600-1759</td></tr><tr><td>12205096</td><td>1800-1959</td></tr><tr><td>12191485</td><td>2000-2159</td></tr><tr><td>12201597</td><td>1200-1359</td></tr><tr><td>12211465</td><td>1400-1559</td></tr><tr><td>12181506</td><td>1600-1759</td></tr><tr><td>12204956</td><td>1800-1959</td></tr><tr><td>12201639</td><td>2000-2159</td></tr></table>
